finished home and team page

--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Hadrien Robert'
+  github_nickname: 'harobert1991'
+- name: 'Daniel Manriquedelara'
+  github_nickname: 'danimanriquedelara'
